# MetalBench

./: .gitignore  AGENTS.md  CONTRIBUTING.md  KERNELS.md  LICENSE  LINK.md  Makefile  README.md  bench  bench_m4.sh  bench_remote  best_times.md  certify  chips.json  decide  design.md  mlx_findings.md  project.yml  promote_or_keep.sh  pyproject.toml  requirements.txt  session.json  session_m4.json  setup.py  summary  verify
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: kernel-idea.md
MetalBench.xcodeproj/: project.pbxproj
agent_steel/: README.md  __init__.py  __main__.py  anti_patterns.md  chips.py  session.py
agent_steel/history/: __init__.py  db.py  models.py
agent_steel/implementor/: __init__.py  agent.py
agent_steel/loop/: __init__.py  greedy.py  runner.py
agent_steel/optimizer/: __init__.py  agent.py  extraction.py  knowledge_base.py  patterns.json
agent_steel/profiler/: __init__.py  agent.py  bench_runner.py  gputrace_check.py
agent_steel/prompts/: diagnose_bottleneck.md  implementor.md  optimize_kernel.md  optimizer.md  profiler.md  verify_pr.md
agent_steel/providers/: README.md  __init__.py  anthropic.py  base.py  openai.py
agent_steel/verifier/: __init__.py  agent.py
agent_steel/welder/: __init__.py  agent.py
docs/: adding-a-new-chip.md
metal/scripts/: chip_table.h  setup.cpp  (+2 more)
metal_bench.xcworkspace/: contents.xcworkspacedata
prompts/: optimize_kernel.md
research/: mlx_consistency.md
scripts/: generate_chip_table.py  render_best_times.py  render_chip_results.py  render_link_md.py
tests/: test_chip_registry.py
(+698 files in other folders)
