[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metalbench"
version = "0.0.1"
description = "Agentic harness for authoring + benchmarking Apple Metal kernels against MLX references."
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.18.0",
    "numpy>=1.26.0",
]

[project.scripts]
metalbench = "metalbench.cli:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pyright]
include = ["python"]
extraPaths = ["python"]
